--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@commitlint/config-conventional": "^17.6.6",
     "commitizen": "^4.3.0",
     "cz-emoji": "^1.3.2-canary.2",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "sass": "^1.63.6"
   }
 }
