--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "prepare": "husky install",
-    "commit": "cz"
+    "commit": "cz",
+    "lint": "next lint && npm run lint:style",
+    "lint:fix": "next lint --ignore-path .gitignore --fix",
+    "lint:style": "stylelint --ignore-path .gitignore './**/*.{css,scss}'",
+    "lint:style:fix": "stylelint --ignore-path .gitignore --fix './**/*.{css,scss}'",
+    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css,scss}'"
   },
   "dependencies": {
     "@types/node": "20.4.2",
@@ -27,6 +31,12 @@
     "commitizen": "^4.3.0",
     "cz-emoji": "^1.3.2-canary.2",
     "husky": "^8.0.3",
-    "sass": "^1.63.6"
+    "prettier": "^3.0.0",
+    "sass": "^1.63.6",
+    "stylelint": "^15.10.1",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-recommended-scss": "^12.0.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-scss": "^5.0.1"
   }
 }
