feat: :sparkles: サインインとサインアップのapi通信の実装

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
   "css.validate": false,
   "scss.validate": false,
   "javascript.validate.enable": false,
-  "typescript.validate.enable": false,
-  "editor.tabSize": 2
+  // "typescript.validate.enable": false,
+  "editor.tabSize": 2,
+  "cSpell.words": ["Eventify"]
 }
