--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,9 @@
   },
   "stylelint.validate": ["css", "scss"], //styleLintはcssとscssファイルのみ
   //↓VSCodeデフォルトのフォーマットは無効
-  "css.validate": false,
-  "scss.validate": false,
-  "javascript.validate.enable": false,
+  // "css.validate": false,
+  // "scss.validate": false,
+  // "javascript.validate.enable": false,
   // "typescript.validate.enable": false,
   "editor.tabSize": 2,
   "cSpell.words": ["Eventify"]
