--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.5.2",
-    "next": "13.5.2",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "swr": "^2.2.2",
+    "swr": "^2.2.4",
     "the-new-css-reset": "^1.8.3",
     "typescript": "5.1.6"
   },
